# srccat

./: Makefile  README.md  collector.py  filecollector.py  main.py  model.py  pyproject.toml  render.py
src/srccat/: __init__.py  collector.py  config.py  errors.py  filefilter.py  filter.py  main.py  model.py  processing.py  processor.py  render.py
src/srccat/templates/: review_cs.template  review_java.template  review_kt.template  review_py.template  review_vb.template
templates/: review_py.template
tests/: test_collector.py  test_filter.py  test_model.py
