[project]
name = "srccat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pip>=26.1.2",
    "pytest>=9.1.1",
]

[project.scripts]
srccat = "srccat.main:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
